# lsl-website

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
components/: Cargo.toml
components/src/: accordion.rs  chart.rs  collapsible.rs  form.rs  header.rs  legend.rs  lib.rs  player.rs
discord_bridge/: .env.example  Cargo.toml
discord_bridge/src/: main.rs
pages/: Cargo.toml
pages/src/: activity.rs  auth.rs  dash.rs  faq.rs  home.rs  leaderboard.rs  lib.rs  map.rs  ranking.rs  submits.rs  user.rs
server/: Cargo.toml
server/src/: api.rs  auth.rs
site/: Cargo.toml
site/migration/: base.sql
site/src/: app.rs  lib.rs  main.rs
site/style/: _components.scss  _faq.scss  _form.scss  _home.scss  _leaderboard.scss  _profile.scss  _ranking.scss  main.scss
src/: api.rs  app.rs  auth.rs  fallback.rs  lib.rs  main.rs  state.rs
src/components/: activity.rs  auth.rs  dash.rs  home.rs  leaderboard.rs  map.rs  mod.rs  ranking.rs  user.rs
src/server/: api.rs  auth.rs
style/: _auth.scss  _dash.scss  _faq.scss  _form.scss  _home.scss  _leaderboard.scss  _profile.scss  _ranking.scss  main.scss
tutorial/: book.toml
tutorial/src/: SUMMARY.md  introduction.md
tutorial/src/boosts/: ceiling_boost.md  curve_boost.md  introduction.md  ramp_slide.md
tutorial/src/challenges/: introduction.md
tutorial/src/environment/: head_hit.md  introduction.md  ramp_jump.md  v_curve.md
tutorial/src/freestyle/: locations.md
tutorial/src/jumps/: bhop.md  bhop_animationless.md  bunny_hop.md  introduction.md  jump.md  late_jump.md  late_skim.md  null_jump.md  one_tick.md  skim.md
tutorial/src/pathing/: difficulty.md  height.md  time.md
tutorial/src/scaling/: corner_climb.md  introduction.md  pole_climb.md  wall_climb.md
tutorial/src/setup/: controls.md  physics.md
types/: Cargo.toml
types/src/: api.rs  internal.rs  leptos.rs  lib.rs
util/: Cargo.toml
util/src/: lib.rs
