[workspace]
members = ["site", "pages", "components", "server", "discord_bridge"]
exclude = ["tutorial"]
default-members = ["site"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.88"
cfg-if = "1"
charming = { version = "0.5", features = ["wasm"] }
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1"
console_log = "1"
futures = { version = "0.3.31" }
http = "1.1.0"
leptos = { version = "0.8.2", features = ["nightly"] }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
rust_decimal = "1.36.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.38"
log = "0.4"
server_fn = { version = "0.8.2", features = ["multipart"] }
simple_logger = "5"
strum = { version = "0.26", features = ["derive"] }
wasm-bindgen = "=0.2.100"
web-sys = {version ="0.3", features = ["DataTransfer", "FileList", "DomRectReadOnly", "ResizeObserver", "ResizeObserverEntry"] }
argon2 = "0.5.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum_session = "0.16"
axum_session_auth = "0.16"
axum_session_sqlx = { version = "0.5", features = ["postgres", "tls-rustls"] }
leptos_axum = "0.8.2"
oauth2 = "4.4.2"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "chrono", "rust_decimal"] }
tokio = "1.25.0"
tokio-stream = "0.1.16"
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1.37"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"