[package]
name = "components"
version = "0.1.0"
edition = "2024"

[dependencies]
types = {path = "../types", default-features = false }

charming.workspace = true
chrono.workspace = true
leptos.workspace = true
leptos_router.workspace = true
rust_decimal.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[features]
default = [ "ssr" ]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "types/ssr",
]