[package]
name = "discord_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.38"
log = "0.4"
reqwest = { version = "0.12.9", features = ["json"] }
rust_decimal = "1.36.0"
serde_json = "1.0.140"
simple_logger = "5"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "rust_decimal"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "time"] }
urlencoding = "2.1.3"
