[package]
name = "discord_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
types.path = "../types"

chrono.workspace = true
log.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
sqlx.workspace = true
strum.workspace = true
tokio.workspace = true
urlencoding.workspace = true
