[package]
name = "pages"
version = "0.1.0"
edition = "2024"

[dependencies]
util = { path = "../util" }
server = {path = "../server", default-features = false }
types = {path = "../types", default-features = false }
components = { path = "../components", default-features = false }

cfg-if.workspace = true
charming.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
rust_decimal.workspace = true
server_fn.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
leptos_axum = { workspace = true, optional = true }

[features]
default = [ "ssr" ]
ssr = [
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr", 
    "leptos_router/ssr",
    "server/ssr",
    "types/ssr",
]