[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
types = {path = "../types", default-features = false }

anyhow.workspace = true
chrono.workspace = true
http.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
rust_decimal.workspace = true
serde.workspace = true
server_fn.workspace = true
strum.workspace = true
thiserror.workspace = true
argon2 = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
axum_session_sqlx = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[features]
default = [ "ssr" ]
ssr = [
    "dep:argon2",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:leptos_axum",
    "dep:oauth2",
    "dep:rand",
    "dep:reqwest",
    "dep:sqlx",
    "leptos/ssr",
    "leptos_meta/ssr", 
    "leptos_router/ssr",
    "types/ssr",
]